tests/baselines/reference/declarationEmitClassMemberNameConflict.errors.txt
tests/cases/compiler/declarationEmitClassMemberNameConflict.ts(29,9): error TS1050: A 'set' accessor must have a corresponding 'get' accessor.


==== tests/cases/compiler/declarationEmitClassMemberNameConflict.ts (1 errors) ====
    export class C1 {
        C1() { } // has to be the same as the class name
    
        bar() {
            return function (t: typeof C1) {
            };
        }
    }
    
    export class C2 {
        C2: any // has to be the same as the class name
    
        bar() {
            return function (t: typeof C2) {
            };
        }
    }
    
    export class C3 {
        get C3() { return 0; } // has to be the same as the class name
    
        bar() {
            return function (t: typeof C3) {
            };
        }
    }
    
    export class C4 {
        set C4(v) { } // has to be the same as the class name
            ~~
!!! error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
    
        bar() {
            return function (t: typeof C4) {
            };
        }
    }